--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   
   <div>
     
-      <button style="margin-left: -100px;">Yes</button>
-      <button style="margin-left: 100px;">No</button>
+      <button style="margin-left: -100px;">Sim</button>
+      <button style="margin-left: 100px;">Nao</button>
   </div>
 
   
     <div class="text">
-      <i>Hello world</i>
+      <i>Namora cmg</i>
     </div>
  
   <script src="js/script.js"></script>
